chore: Update the company list screen.

--- a/company-management-frontend/src/index.html
+++ b/company-management-frontend/src/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-  <nav>
+  <!-- <nav>
     <ul>
       <li><strong>COMPANY MANAGEMENT</strong></li>
     </ul>
-  </nav>
+  </nav> -->
 
-  <main class="container-fluid">
+  <main class="container">
     <app-root></app-root>
   </main>
 </body>
